# fclib

./: CMakeLists.txt  FCLibConfig.cmake.in  FCLibConfigVersion.cmake.in  INSTALL  README.md  TODO.org  about_nix.txt  default.nix  fclib-config.cmake.in  fclib.h  fclib.h.cmake  fclib.nix  fclib.pc.in  fclib_todo.org
3dfch5/: 3DFC.h  3DFCH5.cpp  3DFCH5.h  spmath5.cpp
CMake/: CMakeListsForTests.cmake  FCLIBdoc.cmake  FCLibDoc.cmake  FClibVersion.cmake  InstallPackage.cmake  MyTools.cmake  OutOfSourceBuild.cmake
cmake/: FCLibDoc.cmake  FClibPackageSetup.cmake  FClibVersion.cmake  InstallPackage.cmake  fclib_setup.cmake
config/: additionalpages.doxygen  doxy.config.in  footer.html  header.html  header.tex  mainpage.doxygen  mystyle.sty
config/css/: style.css
data/fclib-library/: README.md  ls-Rl.txt
doc/: FCLib.tex  README  RR.sty  RT-fclib.tex  biblio.bib  macro.tex  pagei.eps  rrpage1.eps
doc/latex/: additionalpages_8doxygen.tex  annotated.tex  contact.tex  csparse_8c.tex  csparse_8c__incl.md5  csparse_8c_a066e18f8570c820530c73ebc88b30a97_cgraph.md5  csparse_8c_a0a717b429d68d3c98b6dc8579988473d_cgraph.md5  csparse_8c_a123f77ef9b940089a931a994deb21735_cgraph.md5  csparse_8c_a12eb66c4f53e51ee5e03ec0b9f24b368_cgraph.md5  csparse_8c_a14612df0010f5284c8f3feac2a7e02fd_cgraph.md5  csparse_8c_a205fe209b778ab1379668d9037f1e6d7_cgraph.md5  csparse_8c_a24796e2f78414578fd2b8e7528535cbb_cgraph.md5  csparse_8c_a312cb23797ac49cd9e99853f6bd2895f_cgraph.md5  csparse_8c_a41590e7ef8c8f3ebce8c7bbe07303c28_cgraph.md5  csparse_8c_a50c30e47141ef37dbb4b342e1b4ba924_cgraph.md5  csparse_8c_a59484c944748596c1a9adecfd19085b4_cgraph.md5  csparse_8c_a5a9bc4224732ce1cedc50119afc687c1_cgraph.md5  csparse_8c_a5ae664f3c6b2baeed717be084e00e13f_cgraph.md5  csparse_8c_a5c531804008e67c207e93f14c2551b1a_cgraph.md5  csparse_8c_a6a35ad4816f210234a33eed09b19d181_cgraph.md5  csparse_8c_a6aa95f82cd0d8c61afb033405320d727_cgraph.md5  csparse_8c_a6d705e404a7831ccf01bc0ea064215b9_cgraph.md5  csparse_8c_a752362fe7bf8d0d49d3c2d788f4d38a9_cgraph.md5  csparse_8c_a767dc90c22d90fe898f72c2da0d98c03_cgraph.md5  csparse_8c_a7c59264397d2c5cc85c87c879aedc4f5_cgraph.md5  csparse_8c_a833a289a30d66ea255d49ab3e93c1334_cgraph.md5  csparse_8c_a8ae6ef945b48ea6aff888481c8394ef8_cgraph.md5  csparse_8c_a9fede5f7dcf4367d7d005ca6dd0ba100_cgraph.md5  csparse_8c_aa7fdeead97aef81cdf18af7576a7f722_cgraph.md5  csparse_8c_aad3a584d9185a4fe4497a36f892b9c72_cgraph.md5  csparse_8c_ac3a64b3dfa45b30d2e764e096107ba1e_cgraph.md5  csparse_8c_ad5fa81f80009c06259a77fd7d2092f78_cgraph.md5  csparse_8c_ae296f1a9ad0b70efedc382fae12e028b_cgraph.md5  csparse_8c_aebd7035aaa1627313149c32755b9f642_cgraph.md5  csparse_8c_af29c4a6ca5cea4b9ffa1cbf24636bbc6_cgraph.md5  csparse_8c_af84bc0a35c099a9a1e01e5aebf8c7292_cgraph.md5  csparse_8c_afcc0ebf37f4cf80e097ac7e8aa2830f2_cgraph.md5  csparse_8h.tex  csparse_8h__dep__incl.md5  csparse_8h_a090225477a18abe5f8d5ab26e4efaf3a_cgraph.md5  (+100 more)
src/: 3dfc.h  Config.mak  Makefile  fc.h  fcint.h  fclib.c  fclib.h  fclib_priv.h  fcmer.c  fctst.c
src/tests/: fctst.c  fctst_merit.c
src/tests/data/: local_problem_test.hdf5
